# warehub

./: .flake8  .gitignore  .isort.cfg  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
docs/: requirements.txt
docs/source/: conf.py
src/warehub/: __init__.py  __main__.py  arguments.py  command.py  config.py  database.py  exceptions.py  generate.py  metadata.py  model.py  package.py  settings.py  utils.py
src/warehub/templates/: homepage.html  release.html  simple.html  style.css
test/: data.json  database_test.py  delete_test_data.py  metadata.py  test_metadata.py
tests/: database_test.py  delete_test_data.py
